tests/harness/errors/148_not_callable_source_loc.eu
# Error: calling a number as a function — source location should point to call site
x: 42
result: x(10)
RESULT: result
